@@ -167,7 +167,8 @@ container::item_container<received_node *> received_statuses; /* holds informati
 int                  updates_waiting_to_send = 0;
 extern struct connection svr_conn[];
 extern bool          ForceServerUpdate;
-extern int         use_nvidia_gpu;
+extern int           use_nvidia_gpu;
+extern int           internal_state;
 
 const char *PMOMCommand[] =
   {
@@ -205,6 +206,7 @@ fd_set readset;
 
 /* external functions */
 
+void                      check_state(int force);
 extern struct radix_buf **allocate_sister_list(int radix);
 extern int add_host_to_sister_list(char *, unsigned short , struct radix_buf *);
 extern void free_sisterlist(struct radix_buf **list, int radix);
@@ -2515,6 +2517,31 @@ int im_join_job_as_sister(
    * pjob->ji_qs.ji_un.ji_newt.ji_fromaddr = addr->sin_addr.s_addr;
    * pjob->ji_qs.ji_un.ji_newt.ji_scriptsz = 0;
    **/
+
+  // Run a health check if a jobstart health check script is defined
+  if (PBSNodeCheckProlog)
+    {
+    check_state(1);
+
+    if (internal_state & INUSE_DOWN)
+      {
+      sprintf(log_buffer, "Not starting job %s because my health check script reported an error",
+        pjob->ji_qs.ji_jobid);
+      log_err(-1, __func__, log_buffer);
+
+      send_im_error(PBSE_BADMOMSTATE, 1, pjob, cookie, event, fromtask);
+
+      mom_job_purge(pjob);
+
+      if (radix_hosts != NULL)
+        free(radix_hosts);
+
+      if (radix_ports != NULL)
+        free(radix_ports);
+
+      return(IM_DONE);
+      }
+    }
 
   if (check_pwd(pjob) == NULL)
     {
@@ -5919,6 +5946,12 @@ void im_request(
     /* all of these are requests for a sister until we get to IM_ALL_OK */
     case IM_KILL_JOB:
       {
+      // Run a health check if a jobend health check script is allowed
+      if (PBSNodeCheckEpilog)
+        {
+        check_state(1);
+        }
+
       if (connection_from_ms(chan, pjob, pSockAddr) == TRUE)
         {
         im_kill_job_as_sister(pjob,event,momport,FALSE);
